force-app/main/default/objects/Merit_Update_Schedule__c/Merit_Update_Schedule__c.object-meta.xml
<CustomObject>
    <description>Satish 4/11/2019 - Track dates when data uploaded to Merit</description>
    <label>Merit Update Schedule</label>
    <nameField>
        <displayFormat>Schedule-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merit Update Schedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>