force-app/main/default/objects/Merit_Update_Schedule__c/fields/Data_As_Of__c.field-meta.xml
<CustomField>
    <fullName>Data_As_Of__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data As Of</label>
    <type>Date</type>
</CustomField>