force-app/main/default/objects/Merit_Update_Schedule__c/fields/Merit_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Merit_Data_Source__c</fullName>
    <label>Merit Data Source</label>
    <referenceTo>Merit_Data_Source__c</referenceTo>
    <relationshipLabel>Merit Update Schedule</relationshipLabel>
    <relationshipName>Merit_Update_Schedule</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>