force-app/main/default/objects/Merit_Update_Schedule__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <defaultValue>CASE(MONTH(Today()), 1, &quot;December&quot;, 2, &quot;January&quot;, 3, &quot;February&quot;,  4, &quot;March&quot;,  5, &quot;April&quot;,  6, &quot;May&quot;, 7, &quot;June&quot;, 8, &quot;July&quot;, 9, &quot;August&quot;, 10, &quot;September&quot;, 11, &quot;October&quot;, 12, &quot;November&quot;, &quot;None&quot;)</defaultValue>
    <description>Satish 4/11/2019 - Set Previous Month value as data for a given month will always be available and uploaded the next month</description>
    <label>Month</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>January</fullName>
            </value>
            <value>
                <fullName>February</fullName>
            </value>
            <value>
                <fullName>March</fullName>
            </value>
            <value>
                <fullName>April</fullName>
            </value>
            <value>
                <fullName>May</fullName>
            </value>
            <value>
                <fullName>June</fullName>
            </value>
            <value>
                <fullName>July</fullName>
            </value>
            <value>
                <fullName>August</fullName>
            </value>
            <value>
                <fullName>September</fullName>
            </value>
            <value>
                <fullName>October</fullName>
            </value>
            <value>
                <fullName>November</fullName>
            </value>
            <value>
                <fullName>December</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>