force-app/main/default/objects/Merit_Update_Schedule__c/fields/Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Upload_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Upload Date</label>
    <type>Date</type>
</CustomField>